@@ -27,4 +27,5 @@
 * [#121](https://github.com/upfrontsystems/izinto-angular/issues/121) Rename order column to index on Dashboard
 * [#48](https://github.com/upfrontsystems/izinto-angular/issues/48) Add Year dashboard view
 * [#117](https://github.com/upfrontsystems/izinto-angular/issues/117) Read requirements from requirements.txt
+* [#130](https://github.com/upfrontsystems/izinto-angular/issues/130) edit variables with dashboard
 
